openshift/22-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: observability-demo
  labels:
    app.kubernetes.io/name: frontend-ui
    app.kubernetes.io/part-of: observability-demo
spec:
  selector:
    app.kubernetes.io/name: frontend-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
