openshift/32-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: observability-single-span
  labels:
    app.kubernetes.io/name: backend-app
    app.kubernetes.io/part-of: observability-single-span
spec:
  selector:
    app.kubernetes.io/name: backend-app
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
