openshift/23-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-ui
  namespace: observability-single-span
  labels:
    app.kubernetes.io/name: frontend-ui
    app.kubernetes.io/part-of: observability-single-span
spec:
  to:
    kind: Service
    name: frontend-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
